--- a/lesson03/dialog.html
+++ b/lesson03/dialog.html
@@ -5,7 +5,34 @@
 
     <title>Dialog</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
     <style>
+      html {
+        font-family: 'Roboto', sans-serif;
+      }
+
+      #show-dialog {
+        height: 40px;
+        background-color: blue;
+        border-radius: 5px;
+        color: white;
+        font-family: 'Roboto', sans-serif;
+        font-size: 1rem;
+        border: none;
+        padding: 0px 10px;
+        cursor: pointer;
+      }
+
+      #show-dialog:hover, #show-dialog:active {
+        opacity: 0.6;
+      }
+      
+      #show-dialog:focus {
+        outline: 1px solid red;
+      }
+
       .dialog {
         width: 300px;
         height: 200px;
@@ -20,7 +47,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        transition: all 0.6s ease-out;
+        transition: all 0.3s ease-in-out;
       }
 
       .dialog > p {
@@ -41,7 +68,7 @@
       }
 
       .dialog.hidden {
-        transform: translate3d(-50%, -200%, 0);
+        transform: translate3d(-50%, -60%, 0);
         opacity: 0;
       }
 
@@ -54,10 +81,13 @@
         width: 100%;
         height: 100%;
         background-color: rgba(0, 0, 0, 0.3);
+        opacity: 1;
+        transition: opacity 0.2s linear;
       }
 
       .mask.hidden {
-        display: none;
+        opacity: 0;
+        pointer-events: none;
       }
     </style>
   </head>
@@ -65,13 +95,15 @@
   <body>
     <button id="show-dialog">Show dialog</button>
 
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
     <div class="mask hidden"></div>
     <div class="dialog hidden">
       <div class="dialog-close">&times;</div>
       <p>This is a dialog</p>
     </div>
-
-
 
     <script>
       const buttonEl = document.querySelector("#show-dialog");
@@ -92,6 +124,13 @@
       maskEl.addEventListener("click", function() {
         maskEl.classList.add("hidden");
         dialogEl.classList.add("hidden");
+      });
+
+      window.addEventListener("keyup", function(e) {
+        if (e.keyCode === 27) {
+          maskEl.classList.add("hidden");
+          dialogEl.classList.add("hidden");
+        }
       });
     </script>
   </body>
